setup basic 'canvas' project with background rectangle displayed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,18 @@
-@import 'utils/config';
+@import 'utils/config', 'utils/utils';
 
 body {
-   .container {
-	  width: 100vw;
-	  height: 100vh;
-   }
+  .container {
+     margin: 0;
+     background: darkgray;
+     overflow: hidden;
+     text-align: center;
+  
+     width: 100vw;
+     height: 100vh;
+  }
+  #myCanvas {
+     position: absolute;
+     background: lightgray;
+     @extend %center-object;
+  }
 }
